objects/SVMXC__SM_Checklist_Attachment__c.object
<CustomObject>
    <description>Object to hold the checklist attachment references</description>
    <fields>
        <fullName>SVMXC__SM_Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Attachment_Name__c</fullName>
        <label>Attachment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up to the related checklist record</description>
        <label>Checklist</label>
        <referenceTo>SVMXC__Checklist__c</referenceTo>
        <relationshipLabel>Checklist Attachments</relationshipLabel>
        <relationshipName>Checklist_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_ContentDocumentLink_ID__c</fullName>
        <description>This field will store ContentDocument link id.</description>
        <inlineHelpText>This field will store ContentDocument link id.</inlineHelpText>
        <label>ContentDocumentLink ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_File_Type__c</fullName>
        <label>File Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Internal_Question_ID__c</fullName>
        <label>Internal Question ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>SVMXC__Question_Bank__c</referenceTo>
        <relationshipLabel>Checklist Attachments</relationshipLabel>
        <relationshipName>Checklist_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Checklist Attachment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Checklist Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>